kubernetes/employeemanagement-api-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: employeemanagement-api-db-statefulset
  labels:
    app: employeemanagement-api-db
    app.kubernetes.io/part-of: employeemanagement
spec:
  serviceName: employeemanagement-api-db-svc
  selector:
     matchLabels:
       app: employeemanagement-api-db
  replicas: 1
  template:
    metadata:
      labels:
        app: employeemanagement-api-db
    spec:
      containers:
      - name: employeemanagement-api-db
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: employeemanagement-api-db-disk
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: employeemanagement-api-db-disk
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 200M
