kubernetes/employeemanagement-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeemanagement-api-deployment
  labels:
    app: em-api
    app.kubernetes.io/part-of: employeemanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: em-api
  template:
    metadata:
      labels:
        app: em-api
    spec:
      containers:
      - name: em-api-container
        image: haadi94/employeemanagement-api:91f9b8c09ebd8b884ce99ac8e662de74ac614544
        ports:
          - containerPort: 80
        volumeMounts:
            - name: employeemanagement-api-appsettings-volume
              mountPath: /app/appsettings.json
              subPath: employeemanagement-api-appsettings.json
            - name: employeemanagement-api-appsettings-secrets-volume
              mountPath: /app/Secrets
