kubernetes/keycloak-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-db-statefulset
  labels:
    app: keycloak-db
spec:
  serviceName: keycloak-db-svc
  selector:
     matchLabels:
       app: keycloak-db
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
      - name: keycloak-db
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgresql-db-disk
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: keycloak-db-disk
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 200M
