kubernetes/postgresql-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db-statefulset
  labels:
    app: postgresql-db
    app.kubernetes.io/part-of: employeemanagement
spec:
  serviceName: postgresql-db-svc
  selector:
     matchLabels:
       app: postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
      - name: postgresql-db
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgresql-db-disk
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgresql-db-disk
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 500M
