kubernetes/employeemanagement-api-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employeemanagement-api-db-svc
  labels:
    app.kubernetes.io/part-of: employeemanagement
spec:
  type: LoadBalancer
  selector:
    app: employeemanagement-api-db
  ports:
  - port: 5433
    targetPort: 5432
