kubernetes/keycloak-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-svc
spec:
  type: LoadBalancer
  selector:
    app: keycloak-db
  ports:
  - port: 5434
    targetPort: 5432
