kubernetes/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  ports:
  - name: http
    port: 80
    targetPort: 8080
