kubernetes/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  rules:
  - host: "auth.localtest.me"
    http:
      paths:
        backend:
          service:
            name: keycloak
            port:
              number: 443
